enhancements #4, refactor test runs